Push Code classify 2020 and 2021

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -866,37 +866,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98d60c6d38f4423aae056668f2264a1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Chọn thư mục chứa PDF', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2320a264bdfb4fe38ea1e590f9ae5952",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='Thư mục:', disabled=True)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de8db4636c8344a89dc35447d55ce1ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='File PDF:', options=(), value=None)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d5b713251f540efbfdadc3da45530af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Chuyển đổi file đã chọn', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4acc5001ac34498daa0d105e1b70de93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Chuyển đổi tất cả PDF', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "135333166aad473d8eb5b828c90cb3b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, description='Tiến trình trang:', max=1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b116f13aa1674dffa6fcb255e7a7d84e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, description='Tiến trình file:')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4dee31ee0499429cab7a1bf8ccc1d360",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Đoạn code chuyển file pdf sang file ảnh \n",
     "import fitz  # PyMuPDF\n",
     "from PIL import Image\n",
+    "import os\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "from tkinter import filedialog, Tk\n",
     "\n",
-    "def pdf_to_images(pdf_path, output_folder):\n",
-    "    # Mở file PDF\n",
+    "# Hàm chuyển đổi PDF sang ảnh\n",
+    "def pdf_to_images(pdf_path, output_folder, progress_bar, file_progress):\n",
     "    pdf_document = fitz.open(pdf_path)\n",
-    "\n",
-    "    # Lặp qua từng trang và lưu thành ảnh\n",
-    "    for page_number in range(pdf_document.page_count):\n",
+    "    page_count = pdf_document.page_count\n",
+    "    for page_number in range(page_count):\n",
     "        page = pdf_document.load_page(page_number)\n",
     "        image = page.get_pixmap()\n",
-    "\n",
-    "        # Chuyển đổi định dạng RGBA sang RGB\n",
     "        image_rgb = Image.frombytes(\"RGB\", [image.width, image.height], image.samples)\n",
-    "\n",
-    "        # Lưu ảnh dưới dạng JPG\n",
     "        image_rgb.save(f\"{output_folder}/page_{page_number + 1}.jpg\", \"JPEG\")\n",
-    "\n",
-    "    # Đóng file PDF\n",
+    "        \n",
+    "        # Cập nhật tiến trình trang\n",
+    "        progress_bar.value = (page_number + 1) / page_count\n",
     "    pdf_document.close()\n",
+    "    file_progress.value += 1  # Cập nhật tiến trình tổng số file\n",
     "\n",
-    "# Thay đổi đường dẫn file PDF và thư mục đầu ra tùy thuộc vào nhu cầu của bạn\n",
-    "pdf_file_path = \"CMP_Baocaothuongnien_2021.pdf\"\n",
-    "output_folder_path = \"CMP_Baocaothuongnien_2021 Image\"\n",
+    "# Hàm chọn thư mục chứa các file PDF\n",
+    "def select_pdf_folder(_):\n",
+    "    root = Tk()\n",
+    "    root.withdraw()\n",
+    "    folder_path = filedialog.askdirectory()\n",
+    "    root.destroy()\n",
+    "    \n",
+    "    if not folder_path:\n",
+    "        output_label.value = \"Bạn chưa chọn thư mục!\"\n",
+    "        return\n",
+    "    \n",
+    "    pdf_files = [f for f in os.listdir(folder_path) if f.endswith('.pdf')]\n",
+    "    if not pdf_files:\n",
+    "        output_label.value = \"Thư mục không chứa file PDF nào!\"\n",
+    "        return\n",
+    "    \n",
+    "    # Cập nhật dropdown với danh sách file PDF\n",
+    "    dropdown.options = pdf_files\n",
+    "    dropdown_folder_path.value = folder_path\n",
+    "    output_label.value = \"Chọn file PDF hoặc chuyển đổi tất cả.\"\n",
     "\n",
-    "pdf_to_images(pdf_file_path, output_folder_path)\n"
+    "# Hàm chuyển đổi file PDF đã chọn\n",
+    "def convert_selected_pdf(_):\n",
+    "    selected_pdf = dropdown.value\n",
+    "    folder_path = dropdown_folder_path.value\n",
+    "    \n",
+    "    if not selected_pdf or not folder_path:\n",
+    "        output_label.value = \"Hãy chọn thư mục và file PDF trước!\"\n",
+    "        return\n",
+    "    \n",
+    "    pdf_path = os.path.join(folder_path, selected_pdf)\n",
+    "    output_folder = os.path.join(folder_path, selected_pdf.replace(\".pdf\", \" Images\"))\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    \n",
+    "    # Đặt thanh tiến trình về 0 và thực hiện chuyển đổi\n",
+    "    progress_bar.value = 0\n",
+    "    file_progress.value = 0\n",
+    "    file_progress.max = 1\n",
+    "    pdf_to_images(pdf_path, output_folder, progress_bar, file_progress)\n",
+    "    \n",
+    "    output_label.value = f\"Đã chuyển đổi '{selected_pdf}' thành ảnh thành công!\"\n",
+    "\n",
+    "# Hàm chuyển đổi tất cả các file PDF trong thư mục\n",
+    "def convert_all_pdfs(_):\n",
+    "    folder_path = dropdown_folder_path.value\n",
+    "    if not folder_path:\n",
+    "        output_label.value = \"Hãy chọn thư mục chứa các file PDF trước!\"\n",
+    "        return\n",
+    "    \n",
+    "    pdf_files = [f for f in os.listdir(folder_path) if f.endswith('.pdf')]\n",
+    "    if not pdf_files:\n",
+    "        output_label.value = \"Không có file PDF nào trong thư mục!\"\n",
+    "        return\n",
+    "    \n",
+    "    file_progress.value = 0\n",
+    "    file_progress.max = len(pdf_files)\n",
+    "    \n",
+    "    for pdf_file in pdf_files:\n",
+    "        pdf_path = os.path.join(folder_path, pdf_file)\n",
+    "        output_folder = os.path.join(folder_path, pdf_file.replace(\".pdf\", \" Images\"))\n",
+    "        os.makedirs(output_folder, exist_ok=True)\n",
+    "        \n",
+    "        # Đặt thanh tiến trình của mỗi file về 0 và thực hiện chuyển đổi\n",
+    "        progress_bar.value = 0\n",
+    "        pdf_to_images(pdf_path, output_folder, progress_bar, file_progress)\n",
+    "    \n",
+    "    output_label.value = f\"Đã chuyển đổi {len(pdf_files)} file PDF thành ảnh thành công!\"\n",
+    "\n",
+    "# Tạo các widget giao diện\n",
+    "select_folder_button = widgets.Button(description=\"Chọn thư mục chứa PDF\")\n",
+    "select_folder_button.on_click(select_pdf_folder)\n",
+    "\n",
+    "dropdown_folder_path = widgets.Text(value=\"\", description=\"Thư mục:\", disabled=True)\n",
+    "dropdown = widgets.Dropdown(options=[], description=\"File PDF:\")\n",
+    "convert_selected_button = widgets.Button(description=\"Chuyển đổi file đã chọn\")\n",
+    "convert_selected_button.on_click(convert_selected_pdf)\n",
+    "\n",
+    "convert_all_button = widgets.Button(description=\"Chuyển đổi tất cả PDF\")\n",
+    "convert_all_button.on_click(convert_all_pdfs)\n",
+    "\n",
+    "progress_bar = widgets.FloatProgress(value=0, min=0, max=1, description=\"Tiến trình trang:\")\n",
+    "file_progress = widgets.IntProgress(value=0, min=0, description=\"Tiến trình file:\")\n",
+    "output_label = widgets.Label(value=\"\")\n",
+    "\n",
+    "# Hiển thị giao diện\n",
+    "display(select_folder_button, dropdown_folder_path, dropdown, convert_selected_button, convert_all_button, progress_bar, file_progress, output_label)\n"
    ]
   },
   {
