--- a/Update.ipynb
+++ b/Update.ipynb
@@ -706,7 +706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Đoạn code lấy ảnh trong thư mục và dùng i2OCR"
+    "# Đoạn code lấy ảnh trong thư mục và dùng 2OCR"
    ]
   },
   {
@@ -747,49 +747,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Không thể tìm thấy nút tải xuống: Message: \n",
+      "Stacktrace:\n",
+      "\tGetHandleVerifier [0x00007FF7F80C3AF5+28005]\n",
+      "\t(No symbol) [0x00007FF7F80283F0]\n",
+      "\t(No symbol) [0x00007FF7F7EC580A]\n",
+      "\t(No symbol) [0x00007FF7F7F15A3E]\n",
+      "\t(No symbol) [0x00007FF7F7F15D2C]\n",
+      "\t(No symbol) [0x00007FF7F7F5EA97]\n",
+      "\t(No symbol) [0x00007FF7F7F3BA7F]\n",
+      "\t(No symbol) [0x00007FF7F7F5B8B3]\n",
+      "\t(No symbol) [0x00007FF7F7F3B7E3]\n",
+      "\t(No symbol) [0x00007FF7F7F075C8]\n",
+      "\t(No symbol) [0x00007FF7F7F08731]\n",
+      "\tGetHandleVerifier [0x00007FF7F83B646D+3118813]\n",
+      "\tGetHandleVerifier [0x00007FF7F8406CC0+3448624]\n",
+      "\tGetHandleVerifier [0x00007FF7F83FCF3D+3408301]\n",
+      "\tGetHandleVerifier [0x00007FF7F818A44B+841403]\n",
+      "\t(No symbol) [0x00007FF7F803344F]\n",
+      "\t(No symbol) [0x00007FF7F802F4C4]\n",
+      "\t(No symbol) [0x00007FF7F802F65D]\n",
+      "\t(No symbol) [0x00007FF7F801EBB9]\n",
+      "\tBaseThreadInitThunk [0x00007FF8005C7374+20]\n",
+      "\tRtlUserThreadStart [0x00007FF801C3CC91+33]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Demo\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "from pynput.keyboard import Key, Controller\n",
     "import time\n",
+    "\n",
     "driver = webdriver.Chrome()\n",
     "driver.implicitly_wait(10)\n",
     "driver.get(\"https://2ocr.com/online-ocr-vietnamese/\")\n",
+    "# Click vào Drag file\n",
     "driver.find_element(By.XPATH, \"//div[@class='filepicker dropzone filePicker dz-clickable']\").click()\n",
     "time.sleep(3)\n",
     "\n",
     "keyboard = Controller()\n",
-    "keyboard.type(\"E:\\\\NCKHDigital\\\\Photos\\\\BCphotos\\\\0004.jpg\")\n",
+    "keyboard.type(\"E:\\\\NCKHDigital\\\\Photos\\\\BCphotos\\\\0009.jpg\")\n",
+    "keyboard.press(Key.enter)\n",
+    "\n",
+    "# Bấm vào nút x để có thể nhập text\n",
+    "driver.find_element(By.XPATH, \"//div[@class=' css-1c5n42a-indicatorContainer']\").click()\n",
+    "keyboard.type(\"Vietnamese\")\n",
     "keyboard.press(Key.enter)\n",
     "\n",
     "\n",
-    "driver.find_element(By.XPATH, \"//div[@class=' css-1c5n42a-indicatorContainer']\").click()\n",
+    "driver.find_element(By.XPATH, \"//span[@class='MuiButton-label' and text()='Ok']\").click()\n",
+    "# Chờ cho đến khi nút tải xuống xuất hiện, sau đó nhấn vào nút tải xuống\n",
+    "try:\n",
+    "    download_button = WebDriverWait(driver, 20).until(\n",
+    "        EC.element_to_be_clickable((By.ID, \"download\"))\n",
+    "    )\n",
+    "    download_button.click()\n",
+    "except Exception as e:\n",
+    "    print(\"Không thể tìm thấy nút tải xuống:\", e)\n",
+    "\n",
     "\n",
     "# driver.quit()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code lấy ảnh trong thư mục và dùng i2OCR"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "ElementClickInterceptedException",
-     "evalue": "Message: element click intercepted: Element <input type=\"submit\" style=\"margin-left:-50px;\" title=\"Perform OCR\" class=\"btn btn-large btn-danger bold space\" id=\"submit_i2ocr\" value=\"Extract Text\"> is not clickable at point (1089, 468). Other element would receive the click: <a aria-label=\"learn more about cookies\" role=\"button\" tabindex=\"0\" class=\"cc-link\" href=\"/privacy\" target=\"_blank\">...</a>\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7F80C3AF5+28005]\n\t(No symbol) [0x00007FF7F80283F0]\n\t(No symbol) [0x00007FF7F7EC580A]\n\t(No symbol) [0x00007FF7F7F1D6CE]\n\t(No symbol) [0x00007FF7F7F1B16C]\n\t(No symbol) [0x00007FF7F7F18628]\n\t(No symbol) [0x00007FF7F7F1785D]\n\t(No symbol) [0x00007FF7F7F0990E]\n\t(No symbol) [0x00007FF7F7F3BA3A]\n\t(No symbol) [0x00007FF7F7F09246]\n\t(No symbol) [0x00007FF7F7F3BC50]\n\t(No symbol) [0x00007FF7F7F5B8B3]\n\t(No symbol) [0x00007FF7F7F3B7E3]\n\t(No symbol) [0x00007FF7F7F075C8]\n\t(No symbol) [0x00007FF7F7F08731]\n\tGetHandleVerifier [0x00007FF7F83B646D+3118813]\n\tGetHandleVerifier [0x00007FF7F8406CC0+3448624]\n\tGetHandleVerifier [0x00007FF7F83FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF7F818A44B+841403]\n\t(No symbol) [0x00007FF7F803344F]\n\t(No symbol) [0x00007FF7F802F4C4]\n\t(No symbol) [0x00007FF7F802F65D]\n\t(No symbol) [0x00007FF7F801EBB9]\n\tBaseThreadInitThunk [0x00007FF8005C7374+20]\n\tRtlUserThreadStart [0x00007FF801C3CC91+33]\n",
+     "evalue": "Message: element click intercepted: Element <input type=\"submit\" style=\"margin-left:-50px;\" title=\"Perform OCR\" class=\"btn btn-large btn-danger bold space\" id=\"submit_i2ocr\" value=\"Extract Text\"> is not clickable at point (843, 520). Other element would receive the click: <div role=\"dialog\" aria-live=\"polite\" aria-label=\"cookieconsent\" aria-describedby=\"cookieconsent:desc\" class=\"cc-window cc-floating cc-type-info cc-theme-block cc-bottom cc-right cc-color-override--1378217448 \" style=\"\">...</div>\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7F80C3AF5+28005]\n\t(No symbol) [0x00007FF7F80283F0]\n\t(No symbol) [0x00007FF7F7EC580A]\n\t(No symbol) [0x00007FF7F7F1D6CE]\n\t(No symbol) [0x00007FF7F7F1B16C]\n\t(No symbol) [0x00007FF7F7F18628]\n\t(No symbol) [0x00007FF7F7F1785D]\n\t(No symbol) [0x00007FF7F7F0990E]\n\t(No symbol) [0x00007FF7F7F3BA3A]\n\t(No symbol) [0x00007FF7F7F09246]\n\t(No symbol) [0x00007FF7F7F3BC50]\n\t(No symbol) [0x00007FF7F7F5B8B3]\n\t(No symbol) [0x00007FF7F7F3B7E3]\n\t(No symbol) [0x00007FF7F7F075C8]\n\t(No symbol) [0x00007FF7F7F08731]\n\tGetHandleVerifier [0x00007FF7F83B646D+3118813]\n\tGetHandleVerifier [0x00007FF7F8406CC0+3448624]\n\tGetHandleVerifier [0x00007FF7F83FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF7F818A44B+841403]\n\t(No symbol) [0x00007FF7F803344F]\n\t(No symbol) [0x00007FF7F802F4C4]\n\t(No symbol) [0x00007FF7F802F65D]\n\t(No symbol) [0x00007FF7F801EBB9]\n\tBaseThreadInitThunk [0x00007FF8005C7374+20]\n\tRtlUserThreadStart [0x00007FF801C3CC91+33]\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mElementClickInterceptedException\u001b[0m          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m keyboard\u001b[38;5;241m.\u001b[39mtype(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mNCKHDigital\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mPhotos\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mBCphotos\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m0004.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m keyboard\u001b[38;5;241m.\u001b[39mpress(Key\u001b[38;5;241m.\u001b[39menter)\n\u001b[1;32m---> 18\u001b[0m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mID\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msubmit_i2ocr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Sử dụng nút change\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# driver.find_element(By.XPATH, \"//div/span[@class='btn btn-file']\").click()\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[5], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m keyboard\u001b[38;5;241m.\u001b[39mtype(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mE:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mNCKHDigital\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mPhotos\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mBCphotos\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m0004.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m keyboard\u001b[38;5;241m.\u001b[39mpress(Key\u001b[38;5;241m.\u001b[39menter)\n\u001b[1;32m---> 18\u001b[0m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mID\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msubmit_i2ocr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# Sử dụng nút change\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# driver.find_element(By.XPATH, \"//div/span[@class='btn btn-file']\").click()\u001b[39;00m\n",
       "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:94\u001b[0m, in \u001b[0;36mWebElement.click\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclick\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     93\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Clicks the element.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 94\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCLICK_ELEMENT\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webelement.py:395\u001b[0m, in \u001b[0;36mWebElement._execute\u001b[1;34m(self, command, params)\u001b[0m\n\u001b[0;32m    393\u001b[0m     params \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    394\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id\n\u001b[1;32m--> 395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:354\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    352\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 354\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
       "File \u001b[1;32mh:\\AnacondaApp\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mElementClickInterceptedException\u001b[0m: Message: element click intercepted: Element <input type=\"submit\" style=\"margin-left:-50px;\" title=\"Perform OCR\" class=\"btn btn-large btn-danger bold space\" id=\"submit_i2ocr\" value=\"Extract Text\"> is not clickable at point (1089, 468). Other element would receive the click: <a aria-label=\"learn more about cookies\" role=\"button\" tabindex=\"0\" class=\"cc-link\" href=\"/privacy\" target=\"_blank\">...</a>\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7F80C3AF5+28005]\n\t(No symbol) [0x00007FF7F80283F0]\n\t(No symbol) [0x00007FF7F7EC580A]\n\t(No symbol) [0x00007FF7F7F1D6CE]\n\t(No symbol) [0x00007FF7F7F1B16C]\n\t(No symbol) [0x00007FF7F7F18628]\n\t(No symbol) [0x00007FF7F7F1785D]\n\t(No symbol) [0x00007FF7F7F0990E]\n\t(No symbol) [0x00007FF7F7F3BA3A]\n\t(No symbol) [0x00007FF7F7F09246]\n\t(No symbol) [0x00007FF7F7F3BC50]\n\t(No symbol) [0x00007FF7F7F5B8B3]\n\t(No symbol) [0x00007FF7F7F3B7E3]\n\t(No symbol) [0x00007FF7F7F075C8]\n\t(No symbol) [0x00007FF7F7F08731]\n\tGetHandleVerifier [0x00007FF7F83B646D+3118813]\n\tGetHandleVerifier [0x00007FF7F8406CC0+3448624]\n\tGetHandleVerifier [0x00007FF7F83FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF7F818A44B+841403]\n\t(No symbol) [0x00007FF7F803344F]\n\t(No symbol) [0x00007FF7F802F4C4]\n\t(No symbol) [0x00007FF7F802F65D]\n\t(No symbol) [0x00007FF7F801EBB9]\n\tBaseThreadInitThunk [0x00007FF8005C7374+20]\n\tRtlUserThreadStart [0x00007FF801C3CC91+33]\n"
+      "\u001b[1;31mElementClickInterceptedException\u001b[0m: Message: element click intercepted: Element <input type=\"submit\" style=\"margin-left:-50px;\" title=\"Perform OCR\" class=\"btn btn-large btn-danger bold space\" id=\"submit_i2ocr\" value=\"Extract Text\"> is not clickable at point (843, 520). Other element would receive the click: <div role=\"dialog\" aria-live=\"polite\" aria-label=\"cookieconsent\" aria-describedby=\"cookieconsent:desc\" class=\"cc-window cc-floating cc-type-info cc-theme-block cc-bottom cc-right cc-color-override--1378217448 \" style=\"\">...</div>\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7F80C3AF5+28005]\n\t(No symbol) [0x00007FF7F80283F0]\n\t(No symbol) [0x00007FF7F7EC580A]\n\t(No symbol) [0x00007FF7F7F1D6CE]\n\t(No symbol) [0x00007FF7F7F1B16C]\n\t(No symbol) [0x00007FF7F7F18628]\n\t(No symbol) [0x00007FF7F7F1785D]\n\t(No symbol) [0x00007FF7F7F0990E]\n\t(No symbol) [0x00007FF7F7F3BA3A]\n\t(No symbol) [0x00007FF7F7F09246]\n\t(No symbol) [0x00007FF7F7F3BC50]\n\t(No symbol) [0x00007FF7F7F5B8B3]\n\t(No symbol) [0x00007FF7F7F3B7E3]\n\t(No symbol) [0x00007FF7F7F075C8]\n\t(No symbol) [0x00007FF7F7F08731]\n\tGetHandleVerifier [0x00007FF7F83B646D+3118813]\n\tGetHandleVerifier [0x00007FF7F8406CC0+3448624]\n\tGetHandleVerifier [0x00007FF7F83FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF7F818A44B+841403]\n\t(No symbol) [0x00007FF7F803344F]\n\t(No symbol) [0x00007FF7F802F4C4]\n\t(No symbol) [0x00007FF7F802F65D]\n\t(No symbol) [0x00007FF7F801EBB9]\n\tBaseThreadInitThunk [0x00007FF8005C7374+20]\n\tRtlUserThreadStart [0x00007FF801C3CC91+33]\n"
      ]
     }
    ],
@@ -871,6 +927,52 @@
     "finally:\n",
     "    # Đóng trình duyệt sau khi hoàn thành\n",
     "    driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Đoạn code phân chia ra từng folder 2020 và 2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phân loại file hoàn tất.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "# Đường dẫn thư mục chứa các file cần phân loại\n",
+    "source_folder = \"DemoYear/\"  # Thay \"source_folder\" bằng đường dẫn đến thư mục chứa file của bạn\n",
+    "\n",
+    "# Tạo thư mục đích cho từng năm nếu chưa có\n",
+    "for year in [\"2020\", \"2021\"]:\n",
+    "    os.makedirs(os.path.join(source_folder, year), exist_ok=True)\n",
+    "\n",
+    "# Duyệt qua các file trong thư mục nguồn\n",
+    "for filename in os.listdir(source_folder):\n",
+    "    file_path = os.path.join(source_folder, filename)\n",
+    "    \n",
+    "    # Chỉ xử lý nếu là file (bỏ qua thư mục)\n",
+    "    if os.path.isfile(file_path):\n",
+    "        # Kiểm tra nếu file có chứa năm 2020 hoặc 2021\n",
+    "        if \"2020\" in filename:\n",
+    "            shutil.move(file_path, os.path.join(source_folder, \"2020\", filename))\n",
+    "        elif \"2021\" in filename:\n",
+    "            shutil.move(file_path, os.path.join(source_folder, \"2021\", filename))\n",
+    "\n",
+    "print(\"Phân loại file hoàn tất.\")\n"
    ]
   }
  ],
